# progetto_sistemi_operativi

./: .gitignore  AUTHOR  CMakeLists.txt  README.md  term0.uriscv
headers/: const.h
phase1/: asl.c  pcb.c
phase2/: README.md  exceptions.c  functions.c  initial.c  interrupts.c  kernel.c  p2test.c  scheduler.c
phase2/headers/: exceptions.h  functions.h  initial.h  interrupts.h  kernel.c  klog.h  scheduler.h
phase3/: initProc.c  sysSupport.c  vmSupport.c
phase3/headers/: const.h  initProc.h  sysSupport.h  vmSupport.h
testers/: .gitignore  README.md
